# rgsim

./: CMakeLists.txt  README.md  notes  runsim.sh
lib/: CMakeLists.txt  control_interface.cpp  control_interface.h  telem_interface.cpp  telem_interface.h
models/arena/: model.sdf
models/hokuyo/: model.sdf
models/robot/: CMakeLists.txt  model.sdf
models/robot/msgs/: CMakeLists.txt  EncoderMsg.proto  MotorsCommand.proto
models/robot/plugins/: encoder_plugin.cpp  encoder_plugin.h  motor_plugin.cpp  motor_plugin.h
tools/: CMakeLists.txt  motors_test.cpp  telem_test.cpp
worlds/: rgsim.world
